# gwosc-catalog

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  schema.json
.github/workflows/: docs.yml  schema-validation.yml
ccverify/: __init__.py  core.py  schema.py
creation/: index.html
docs/: creation.md  index.md  schema.md  validation.md
gwosc_catalog/: schema.py
notebooks/: make_dummy_catalog.ipynb
schema/: index.html
search/: search_index.json
tests/: test_schema.py  test_validation.py  test_verify.py
validation/: index.html
verify/: __init__.py  core.py
