[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gwosc-catalog"
authors = [{ name = "GWOSC", email = "gwosc@igwn.org" }]
description = "Upload Schema for GWOSC Catalogs"
maintainers = [{ name = "Community Catalog Dev Team", email = "gwosc@igwn.org" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
keywords = [
    "gravitational-waves",
    "catalog",
    "events",
]
dependencies = [
  "numpy",
  "pandas",
]

[project.urls]
homepage = "https://github.com/gwosc-tutorial/gwosc-catalog"
documentation = "https://github.com/gwosc-tutorial/gwosc-catalog"
repository = "https://github.com/gwosc-tutorial/gwosc-catalog"

[tool.setuptools]
packages = ["gwosc_catalog"]

[project.scripts]
validateschema = "gwosc_catalog.schema:main"

[tool.setuptools.dynamic]
version = {attr = "gwosc_catalog.__version__"}
